--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "promises"
   ],
   "dependencies": {
-    "q": "1.x.x",
-    "sqlite3": "2.x.x"
+
+    "sqlite3": "2.2.3",
+    "bluebird": "2.1.3"
   },
   "devDependencies": {
     "q-io": "1.x.x",
